[FIX] Issues with findbugs warnings
Change-Id: Ia950396173de9a10855466d5dec8e41ca4e59077
Signed-off-by: Sree Hari Vignesh <sreeharivignesh.b@kalycito.com>